get log file lines
