# process-manager/src/main/webapp/openapi/openapi.yaml
@@ -875,5 +875,70 @@ paths:
         '404':
           description: Error logs not found for the given process id.
 
+  /process/{processId}/log/out/lines:
+    get:
+      tags:
+        - Processes
+      summary: Získá standardní výstup ve formě řádklů
+      description: Získá standardní výstup ve formě řádků
+      parameters:
+        - name: processId
+          in: path
+          required: true
+          description: UUID procesu, pro který se získávají logy.
+          schema:
+            type: string
+        - name: offset
+          in: query
+          description: Počáteční index, od kterého se začnou načítat řádky logu.
+          schema:
+            type: integer
+          example: 0
+        - name: limit
+          in: query
+          description: Maximální počet řádků logu, které se mají vrátit.
+          schema:
+            type: integer
+          example: 100
+      responses:
+        '200':
+          description: Úspěšně načtené logy procesu.
+        '400':
+          description: Neplatný požadavek, např. neplatný offset nebo limit.
+        '404':
+          description: Proces s daným UUID nebyl nalezen.
+
+  /process/{processId}/log/err/lines:
+    get:
+      tags:
+        - Processes
+      summary: Získá err výstup ve formě řádklů
+      description: Získá err výstup ve formě řádků
+      parameters:
+        - name: processId
+          in: path
+          required: true
+          description: UUID procesu, pro který se získávají logy.
+          schema:
+            type: string
+        - name: offset
+          in: query
+          description: Počáteční index, od kterého se začnou načítat řádky logu.
+          schema:
+            type: integer
+          example: 0
+        - name: limit
+          in: query
+          description: Maximální počet řádků logu, které se mají vrátit.
+          schema:
+            type: integer
+          example: 100
+      responses:
+        '200':
+          description: Úspěšně načtené logy procesu.
+        '400':
+          description: Neplatný požadavek, např. neplatný offset nebo limit.
+        '404':
+          description: Proces s daným UUID nebyl nalezen.
 
 
